[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netprobe"
version = "1.0.0"
description = "A production-quality authorized network reconnaissance and port scanning tool"
readme = "README.md"
authors = [
    { name = "NetProbe Contributors" }
]
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
netprobe = "scanner.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
